# Smallclock

./: CMakeLists.txt  README.md  Smallclock_version.h.in  config.in  更新日志.txt
Smallclock_Src/: CMakeLists.txt
Smallclock_Src/Smallclock_App/: CMakeLists.txt  Smallclock_Version.h  import_static_qt_plugins.h  main.cpp
Smallclock_Src/Smallclock_App/icons/: program_icons.qrc
Smallclock_Src/Smallclock_App/resources/: program_documents.qrc
Smallclock_Src/Smallclock_App/resources/program_documents/: SmallClock_Readme.txt  Updata_Log
Smallclock_Src/Smallclock_Base/: App_Data_Save.h  CMakeLists.txt  Command_Do_In_Thread.h  Get_Time.h  Music_Player.h
Smallclock_Src/Smallclock_Gui/: CMakeLists.txt  Message_Window_Show.cpp  Message_Window_Show.h  clock_about_dialog.cpp  clock_about_dialog.h  clock_about_dialog.ui  clock_choose_alarm_clock_time_form.cpp  clock_choose_alarm_clock_time_form.h  clock_choose_alarm_clock_time_form.ui  clock_main_alarmclock_form.cpp  clock_main_alarmclock_form.h  clock_main_alarmclock_form.ui  clock_main_stopwatch_form.cpp  clock_main_stopwatch_form.h  clock_main_stopwatch_form.ui  clock_main_timer_form.cpp  clock_main_timer_form.h  clock_main_timer_form.ui  clock_main_window.cpp  clock_main_window.h  clock_main_window.ui  clock_number_display_form.cpp  clock_number_display_form.h  clock_number_display_form.ui  clock_setting_dialog.cpp  clock_setting_dialog.h  clock_setting_dialog.ui  clocktimer_choose_time_dialog.cpp  clocktimer_choose_time_dialog.h  clocktimer_choose_time_dialog.ui  new_alarm_clock_dialog.cpp  new_alarm_clock_dialog.h  new_alarm_clock_dialog.ui  notify
